--- a/src/fam-api/CMakeLists.txt
+++ b/src/fam-api/CMakeLists.txt
@@ -28,8 +28,16 @@ set(LIBOPENFAM_SRC
   ${CMAKE_CURRENT_SOURCE_DIR}/fam_ops_shm.cpp
   PARENT_SCOPE
   )
-set(MEMORYSERVER_SRC
-  ${MEMORYSERVER_SRC}
+
+set(CIS_SERVER_SRC
+  ${CIS_SERVER_SRC}
+  ${CMAKE_CURRENT_SOURCE_DIR}/fam_descriptor.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/fam_ops_libfabric.cpp
+  PARENT_SCOPE
+  )
+
+set(MEMORY_SERVER_SRC
+  ${MEMORY_SERVER_SRC}
   ${CMAKE_CURRENT_SOURCE_DIR}/fam_descriptor.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/fam_ops_libfabric.cpp
   PARENT_SCOPE
