--- a/src/memory-node/CMakeLists.txt
+++ b/src/memory-node/CMakeLists.txt
@@ -21,8 +21,8 @@
  #
 
 
-set(MEMORYSERVER_SRC
-  ${MEMORYSERVER_SRC}
+set(MEMORY_SERVER_SRC
+  ${MEMORY_SERVER_SRC}
   ${CMAKE_CURRENT_SOURCE_DIR}/memory_server_main.cpp
   PARENT_SCOPE
   )
@@ -32,3 +32,8 @@ set(METADATA_SERVER_SRC
   PARENT_SCOPE
   )
 
+set(CIS_SERVER_SRC
+  ${CIS_SERVER_SRC}
+  ${CMAKE_CURRENT_SOURCE_DIR}/cis_server_main.cpp
+  PARENT_SCOPE
+  )
