--- a/src/metadata_service/CMakeLists.txt
+++ b/src/metadata_service/CMakeLists.txt
@@ -24,6 +24,24 @@ execute_process(COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/../../third-party/build/bin/
 	--plugin=protoc-gen-grpc=${CMAKE_CURRENT_SOURCE_DIR}/../../third-party/build/bin/grpc_cpp_plugin ${CMAKE_CURRENT_SOURCE_DIR}/fam_metadata_rpc.proto
                 COMMAND  ${CMAKE_CURRENT_SOURCE_DIR}/../../third-party/build/bin/protoc --cpp_out=${CMAKE_CURRENT_SOURCE_DIR} --proto_path=${CMAKE_CURRENT_SOURCE_DIR}                       ${CMAKE_CURRENT_SOURCE_DIR}/fam_metadata_rpc.proto)
 
+set(CIS_SERVER_SRC
+  ${CIS_SERVER_SRC}
+  ${CMAKE_CURRENT_SOURCE_DIR}/fam_metadata_rpc.grpc.pb.cc
+  ${CMAKE_CURRENT_SOURCE_DIR}/fam_metadata_rpc.pb.cc
+  ${CMAKE_CURRENT_SOURCE_DIR}/fam_metadata_service_direct.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/fam_metadata_service_client.cpp
+  PARENT_SCOPE
+  )
+
+set(MEMORY_SERVER_SRC
+  ${MEMORY_SERVER_SRC}
+  ${CMAKE_CURRENT_SOURCE_DIR}/fam_metadata_rpc.grpc.pb.cc
+  ${CMAKE_CURRENT_SOURCE_DIR}/fam_metadata_rpc.pb.cc
+  ${CMAKE_CURRENT_SOURCE_DIR}/fam_metadata_service_direct.cpp  
+  ${CMAKE_CURRENT_SOURCE_DIR}/fam_metadata_service_client.cpp
+  PARENT_SCOPE
+  )
+
 set(METADATA_CLIENT_SRC
   ${METADATA_CLIENT_SRC}
   ${CMAKE_CURRENT_SOURCE_DIR}/fam_metadata_rpc.grpc.pb.cc
