--- a/test/unit-test/fam-api/CMakeLists.txt
+++ b/test/unit-test/fam-api/CMakeLists.txt
@@ -26,6 +26,7 @@ function (add_fam_test file_name)
 endfunction()
 
 #add tests
+add_fam_test(fam_put_get)
 add_fam_test(fam_initialize_test)
 add_fam_test(fam_initialize_null_test)
 add_fam_test(fam_options_test)
@@ -35,7 +36,6 @@ add_fam_test(fam_put_get_user_desc)
 add_fam_test(fam_scatter_gather_index_blocking)
 add_fam_test(fam_scatter_gather_stride_blocking)
 add_fam_test(fam_put_get_region_ctx)
-add_fam_test(fam_put_get)
 add_fam_test(fam_quiet_put_get_nonblocking)
 add_fam_test(fam_scatter_gather_index_nonblocking)
 add_fam_test(fam_scatter_gather_stride_nonblocking)
@@ -56,10 +56,10 @@ add_fam_test(fam_fetch_arithmatic_atomics_test)
 add_fam_test(fam_fetch_logical_atomics_test)
 add_fam_test(fam_fetch_min_max_atomics_test)
 add_fam_test(fam_copy_test)
-if (${TEST_ALLOCATOR} STREQUAL "grpc")
+if (${TEST_OPENFAM_MODEL} STREQUAL "memory_server")
 	add_fam_test(fam_invalid_key_test)
 	add_fam_test(fam_fence_test)
-elseif (${TEST_ALLOCATOR} STREQUAL "SHM")
+elseif (${TEST_OPENFAM_MODEL} STREQUAL "shared_memory")
 	add_fam_test(fam_allocate_map_nvmm)
 	add_fam_test(fam_compare_swap_atomics_nvmm_test)
 	add_fam_test(fam_fetch_arithmatic_atomics_nvmm_test)
