--- a/.gitignore
+++ b/.gitignore
@@ -16,4 +16,11 @@ third-party/radixtree/
 third-party/release-2.1.6-beta.tar.gz
 third-party/libevent-release-2.1.6-beta
 third-party/openmpi-4.0.1.tar.gz
-
+src/memory_service/fam_memory_service_rpc.grpc.pb.cc
+src/memory_service/fam_memory_service_rpc.pb.cc
+src/metadata_service/fam_metadata_rpc.grpc.pb.cc
+src/metadata_service/fam_metadata_rpc.pb.cc
+src/memory_service/fam_memory_service_rpc.grpc.pb.h
+src/memory_service/fam_memory_service_rpc.pb.h
+src/metadata_service/fam_metadata_rpc.grpc.pb.h
+src/metadata_service/fam_metadata_rpc.pb.h
