--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -131,7 +131,7 @@ include_directories(/usr/local/include)
 
 set( TEST_DEFAULT_REGION "Default" )
 set( TEST_OPENFAM_MODEL "memory_server" )
-set( TEST_CIS_INTERFACE_TYPE "rpc" )
+# set( TEST_CIS_INTERFACE_TYPE "rpc" )
 set( TEST_CIS_SERVER "127.0.0.1" )
 set( TEST_GRPC_PORT "8787" )
 set( TEST_LIBFABRIC_PROVIDER "sockets" )
@@ -149,28 +149,19 @@ if (${TEST_OPENFAM_MODEL} STREQUAL "shared_memory")
         add_definitions(-DSHM)
 endif()
 
-add_definitions(-DSERVER_LIST="0:127.0.0.1")
-add_definitions(-DMEMSERVER_LIBFABRIC_PORT="7500")
-add_definitions(-DMEMSERVER_LIBFABRIC_PROVIDER="sockets")
-add_definitions(-DMEMSERVER_ADDR="127.0.0.1")
-
 if (ENABLE_METADATA_SERVICE_RPC)
 	if(${TEST_OPENFAM_MODEL} STREQUAL "shared_memory")
-		message(STATUS "Error : Can not enable RPC in shared memory model")
+                message(STATUS "Error : Can not enable RPC in shared memory model")
 	else()
-        message(STATUS "Using Metadata service RPC interface")
-		add_definitions(-DMETADATA_SERVICE_RPC)
-		add_definitions(-DMETASERVER_RPC_PORT=8788)
+                message(STATUS "Using Metadata service RPC interface")
 	endif()
 endif()
 
 if (ENABLE_MEMORY_SERVICE_RPC)
 	if(${TEST_OPENFAM_MODEL} STREQUAL "shared_memory")
-        message(STATUS "Error : Can not enable RPC in shared memory model")
-    else()
-        message(STATUS "Using memory service RPC interface")
-		add_definitions(-DMEMORY_SERVICE_RPC)
-		add_definitions(-DMEMSERVER_RPC_PORT=8789)
+                message(STATUS "Error : Can not enable RPC in shared memory model")
+        else()
+                message(STATUS "Using memory service RPC interface")
 	endif()
 endif()
 
