--- a/test/common/fam_test_config.h.in
+++ b/test/common/fam_test_config.h.in
@@ -64,7 +64,8 @@ void init_fam_options(Fam_Options *famOpts) {
     memset((void *)famOpts, 0, sizeof(Fam_Options));
 
     famOpts->openFamModel = strdup(TEST_OPENFAM_MODEL);
-    famOpts->cisInterfaceType = strdup(TEST_CIS_INTERFACE_TYPE);
+    // Read this from pe_config file.
+    //famOpts->cisInterfaceType = strdup(TEST_CIS_INTERFACE_TYPE);
     famOpts->cisServer = strdup(TEST_CIS_SERVER);
     famOpts->grpcPort = strdup(TEST_GRPC_PORT);
     famOpts->libfabricProvider = strdup(TEST_LIBFABRIC_PROVIDER);
