Addressing first set of comments 1]Added missing library in link statement in CMakeLists.txt 2]Reverting back the IP address to localhost in CMakeLists.txt and 3]changing copyright year in modified files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -132,6 +132,7 @@ include_directories(/usr/local/include)
 set( TEST_DEFAULT_REGION "Default" )
 set( TEST_OPENFAM_MODEL "memory_server" )
 # set( TEST_CIS_INTERFACE_TYPE "rpc" )
+set( TEST_CIS_INTERFACE_TYPE "rpc" )
 set( TEST_CIS_SERVER "127.0.0.1" )
 set( TEST_GRPC_PORT "8787" )
 set( TEST_LIBFABRIC_PROVIDER "sockets" )
