--- a/config/fam_memoryserver_config.yaml
+++ b/config/fam_memoryserver_config.yaml
@@ -21,3 +21,13 @@ provider: sockets
 
 #Libfabric port to be used for datapath operations.
 libfabric_port: 7500
+
+# Atomic library threads count - default (0) indicates ATL disabled
+ATL_threads: 0
+
+# ATL queue size - Number of elements in each queue
+ATL_queue_size: 1000
+
+# ATL data size per thread(MiB) - This will be used to allocate buffers and other queue related
+# data structures
+ATL_data_size: 1024
