Enable known issue flag

--- a/test/unit-test/fam-api/CMakeLists.txt
+++ b/test/unit-test/fam-api/CMakeLists.txt
@@ -46,7 +46,9 @@ add_fam_test(fam_invalid_offset_test)
 add_fam_test(fam_noperm_test)
 add_fam_test(fam_create_destroy_region_test)
 add_fam_test(fam_create_destroy_region_test_mt)
-add_fam_test(fam_create_alloc_destroy_mt)
+if (${TEST_ENABLE_KNOWN_ISSUES} STREQUAL "yes")
+    add_fam_test(fam_create_alloc_destroy_mt)
+endif()
 add_fam_test(fam_nonfetch_arithmatic_atomics_test)
 add_fam_test(fam_nonfetch_logical_atomics_test)
 add_fam_test(fam_nonfetch_min_max_atomics_test)
