--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -140,6 +140,11 @@ set( TEST_FAM_CONTEXT_MODEL "FAM_CONTEXT_DEFAULT" )
 set( TEST_RUNTIME "PMIX" )
 set( TEST_NUM_CONSUMER "1" )
 
+set( TEST_ENABLE_KNOWN_ISSUES "no" )
+if (ENABLE_KNOWN_ISSUES)
+    set( TEST_ENABLE_KNOWN_ISSUES "yes" )
+endif()
+
 if (ARG_OPENFAM_MODEL)
         set( TEST_OPENFAM_MODEL ${ARG_OPENFAM_MODEL})
 endif()
