Code Coverage enablement for OpenFAM 2.0 (#82)
* Code Coverage enablement for OpenFAM 2.0

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -92,7 +92,7 @@ set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS} -DDEBUG -O0 -g")
 #
 # gcc flags for debug build
 #
-set(CMAKE_CXX_FLAGS_COVERAGE "${CMAKE_CXX_FLAGS} -DDEBUG -DCOVERAGE -Og -g -fprofile-arcs -ftest-coverage")
+set(CMAKE_CXX_FLAGS_COVERAGE "${CMAKE_CXX_FLAGS} -DDEBUG -DCOVERAGE -O0 -g -fprofile-arcs -ftest-coverage")
 
 set(CMAKE_POSITION_INDEPENDENT_CODE TRUE)
 
@@ -139,6 +139,11 @@ set( TEST_FAM_THREAD_MODEL "FAM_THREAD_SERIALIZE" )
 set( TEST_FAM_CONTEXT_MODEL "FAM_CONTEXT_DEFAULT" )
 set( TEST_RUNTIME "PMIX" )
 set( TEST_NUM_CONSUMER "1" )
+
+set( TEST_ENABLE_KNOWN_ISSUES "no" )
+if (ENABLE_KNOWN_ISSUES)
+        set( TEST_ENABLE_KNOWN_ISSUES "yes" )
+endif()
 
 if (ARG_OPENFAM_MODEL)
         set( TEST_OPENFAM_MODEL ${ARG_OPENFAM_MODEL})
