Using CMake variable to send status

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -141,6 +141,8 @@ set( TEST_RUNTIME "PMIX" )
 set( TEST_NUM_CONSUMER "1" )
 IF (${CMAKE_MAJOR_VERSION} GREATER 2)
         set( TEST_SKIP_STATUS 77 )
+ELSE ()
+        set( TEST_SKIP_STATUS 0 )
 ENDIF()
 set( TEST_ENABLE_KNOWN_ISSUES "no" )
 if (ENABLE_KNOWN_ISSUES)
