--- a/test/common/fam_test_config.h.in
+++ b/test/common/fam_test_config.h.in
@@ -60,11 +60,7 @@ using namespace openfam;
 // Runtime configuration
 #cmakedefine TEST_NPE "${TEST_NPE}"
 
-#cmakedefine TEST_SKIP_STATUS ${TEST_SKIP_STATUS}
-
-#ifndef TEST_SKIP_STATUS
-#define TEST_SKIP_STATUS 0    
-#endif
+#define TEST_SKIP_STATUS ${TEST_SKIP_STATUS}
 
 void init_fam_options(Fam_Options *famOpts) {
     memset((void *)famOpts, 0, sizeof(Fam_Options));
