Skip fam metadata test for memory server model (#85)
Used SKIP_RETURN_CODE CMake property to skip the fam_metadata test.
With the older version of cmake, as in centos, the test will exit without failure.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -139,7 +139,11 @@ set( TEST_FAM_THREAD_MODEL "FAM_THREAD_SERIALIZE" )
 set( TEST_FAM_CONTEXT_MODEL "FAM_CONTEXT_DEFAULT" )
 set( TEST_RUNTIME "PMIX" )
 set( TEST_NUM_CONSUMER "1" )
-
+IF (${CMAKE_MAJOR_VERSION} GREATER 2)
+        set( TEST_SKIP_STATUS 77 )
+ELSE ()
+        set( TEST_SKIP_STATUS 0 )
+ENDIF()
 set( TEST_ENABLE_KNOWN_ISSUES "no" )
 if (ENABLE_KNOWN_ISSUES)
         set( TEST_ENABLE_KNOWN_ISSUES "yes" )
