--- a/test/unit-test/pmix/CMakeLists.txt
+++ b/test/unit-test/pmix/CMakeLists.txt
@@ -22,8 +22,7 @@
 function (add_pmix_test file_name)
         add_executable(${file_name} ${file_name}.cpp)
         target_link_libraries(${file_name} openfam pmix pmi2)
-	add_test(NAME ${file_name} COMMAND ${PROJECT_SOURCE_DIR}/third-party/build/bin/mpirun --allow-run-as-root -np 2 ${CMAKE_CURRENT_BINARY_DIR}/${file_name})
-	#add_test(NAME ${file_name} COMMAND ${CMAKE_CURRENT_BINARY_DIR}/../third-party/build/bin/mpirun --allow-run-as-root -np 2 ${CMAKE_CURRENT_BINARY_DIR}/${file_name})
+	add_test(NAME ${file_name} COMMAND ${CMAKE_COMMAND} -DFILE_NAME=${file_name} -P ${PROJECT_SOURCE_DIR}/run_test.cmake)
 endfunction()
 #add tests
 if (${TEST_RUNTIME} STREQUAL "PMI2")
