--- a/test/unit-test/config/CMakeLists.txt
+++ b/test/unit-test/config/CMakeLists.txt
@@ -22,7 +22,7 @@
 function (add_fam_test file_name)
     add_executable(${file_name} ${file_name}.cpp)
     target_link_libraries(${file_name} openfam gtest yaml-cpp)
-    add_test(NAME ${file_name} COMMAND ${TEST_RUNTIME_BIN} ${TEST_RUNTIME_OPTS} ${CMAKE_CURRENT_BINARY_DIR}/${file_name} ${CMAKE_CURRENT_BINARY_DIR}/sample_config)
+   	add_test(NAME ${file_name} COMMAND ${CMAKE_COMMAND} -DFILE_NAME=${file_name} -DTEST_ARG=${CMAKE_CURRENT_BINARY_DIR}/sample_config -P ${PROJECT_SOURCE_DIR}/run_test.cmake) 
 endfunction()
 
 #add tests
