--- a/config/fam_metadata_config.yaml
+++ b/config/fam_metadata_config.yaml
@@ -23,6 +23,6 @@ rpc_interface: 127.0.0.1:8788
 # Flag to enable or disable region spanning. By default, it is set to true.
 enable_region_spanning: true
 
-#If region spanning is enabled, obtain the value fo size_per_memoryserver.
-size_per_memoryserver=1048576
+#If region spanning is enabled, obtain the value fo region_span_size_per_memoryserver.
+region_span_size_per_memoryserver=1073741824
 
