--- a/test/reg-test/fam-api-reg/CMakeLists.txt
+++ b/test/reg-test/fam-api-reg/CMakeLists.txt
@@ -22,7 +22,10 @@
 function (add_fam_test file_name)
     add_executable(${file_name} ${file_name}.cpp)
     target_link_libraries(${file_name} openfam gtest)
-	add_test(NAME ${file_name} COMMAND ${CMAKE_COMMAND} -DFILE_NAME=${file_name} -P ${PROJECT_SOURCE_DIR}/run_test.cmake)
+	add_test(NAME ${file_name} COMMAND COMMAND ${PROJECT_SOURCE_DIR}/run_test.sh ${CMAKE_CURRENT_BINARY_DIR}/${file_name})
+	IF (${CMAKE_MAJOR_VERSION} GREATER 2)
+        set_tests_properties(${file_name} PROPERTIES SKIP_RETURN_CODE ${TEST_SKIP_STATUS})
+    ENDIF()
 endfunction()
 
 #add tests
@@ -68,13 +71,10 @@ add_fam_test(fam_scatter_gather_blocking_mt_reg_test)
 add_fam_test(fam_stat_reg_test)
 add_fam_test(fam_control_path_reg_test)
 
-
-if (${TEST_OPENFAM_MODEL} STREQUAL "memory_server")
-	add_fam_test(fam_put_get_negative_test)
-	add_fam_test(fam_fence_reg_test)
-	add_fam_test(fam_invalidkey_reg_test)
-	add_fam_test(fam_barrier_reg_test)
-endif()
+add_fam_test(fam_put_get_negative_test)
+add_fam_test(fam_fence_reg_test)
+add_fam_test(fam_invalidkey_reg_test)
+add_fam_test(fam_barrier_reg_test)
 #add_fam_test(fam_put_get)
 #add_fam_test(fam_put_get_multiple)
 #add_fam_test(fam_put_get_region_ctx)
