--- a/test/reg-test/internal-api-reg/CMakeLists.txt
+++ b/test/reg-test/internal-api-reg/CMakeLists.txt
@@ -23,7 +23,7 @@ function (add_fam_test file_name with-mpi)
     add_executable(${file_name} ${file_name}.cpp)
     target_link_libraries(${file_name} openfam gtest)
 if(with-mpi)
- 	add_test(NAME ${file_name} COMMAND ${CMAKE_COMMAND} -DFILE_NAME=${file_name} -P ${PROJECT_SOURCE_DIR}/run_test.cmake)
+	add_test(NAME ${file_name} COMMAND COMMAND ${PROJECT_SOURCE_DIR}/run_test.sh ${CMAKE_CURRENT_BINARY_DIR}/${file_name})
 else()
     add_test(NAME ${file_name} COMMAND ${CMAKE_CURRENT_BINARY_DIR}/${file_name})
 endif()
