--- a/test/unit-test/metadata/CMakeLists.txt
+++ b/test/unit-test/metadata/CMakeLists.txt
@@ -23,7 +23,7 @@ function (add_fam_test file_name)
     add_executable(${file_name} ${file_name}.cpp)
     target_link_libraries(${file_name} fammetadata pmix pmi2 openfam gtest)
     
-    add_test(NAME ${file_name} COMMAND ${CMAKE_COMMAND} -DFILE_NAME=${file_name} -P ${PROJECT_SOURCE_DIR}/run_test.cmake)
+    add_test(NAME ${file_name} COMMAND COMMAND ${PROJECT_SOURCE_DIR}/run_test.sh ${CMAKE_CURRENT_BINARY_DIR}/${file_name})
     IF (${CMAKE_MAJOR_VERSION} GREATER 2)
         set_tests_properties(${file_name} PROPERTIES SKIP_RETURN_CODE ${TEST_SKIP_STATUS})
     ENDIF()
