--- a/config/fam_metadata_config.yaml
+++ b/config/fam_metadata_config.yaml
@@ -18,4 +18,12 @@ metadata_path: /dev/shm/
 # where interface address is hostname (fqdn)/ip4 address where grpc port should be exposed.
 # portno is port to be used by OpenFAM for communication between Metadata Manager and
 # Client Interface Service.
-rpc_interface: 127.0.0.1:8989
+rpc_interface: 127.0.0.1:8788
+
+# Flag to enable or disable region spanning. By default, it is set to true.
+enable_region_spanning: true
+
+# If region spanning is enabled, obtain the value for region_span_size_per_memoryserver.
+# Default value is 1GB.
+region_span_size_per_memoryserver=1073741824
+
