Making fam option for test as default

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -138,8 +138,9 @@ set( TEST_LIBFABRIC_PROVIDER "sockets" )
 set( TEST_FAM_THREAD_MODEL "FAM_THREAD_SERIALIZE" )
 set( TEST_FAM_CONTEXT_MODEL "FAM_CONTEXT_DEFAULT" )
 set( TEST_NUM_CONSUMER "1" )
-if (USE_FAM_OPTION)
-	add_definitions(-DUSE_FAM_OPTION)	
+
+if (USE_CONFIG_OPTION)
+	add_definitions(-DUSE_CONFIG_OPTION)	
 endif()
 	
 IF (${CMAKE_MAJOR_VERSION} GREATER 2)
